Fix styling for mulitple tags that may spill over
Tags must wrap and go onto new lines rather than trying to compress
everything on the same line

--- a/src/templates/blog-list.module.css
+++ b/src/templates/blog-list.module.css
@@ -28,7 +28,7 @@
 
 .tags {
   display: flex;
-  margin-bottom: 15px;
+  flex-wrap: wrap;
 }
 
 .tags div {
@@ -38,6 +38,7 @@
   border-radius: 5px;
   align-items: center;
   justify-content: center;
+  margin-bottom: 15px;
 }
 
 .tags div span {
@@ -48,7 +49,7 @@
   margin-right: 5px;
 }
 
-.tags div:not(:first-child) {
-  margin-left: 10px;
+.tags div:not(:last-child) {
+  margin-right: 10px;
 }
 
